--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.0.1",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.8.4",
