--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - db
     volumes:
       - ./api-server:/backend
-      - /etc/localtime:/etc/localtime:ro # タイムゾーンを日本時刻に設定
+      - /etc/localtime:/etc/localtime:ro
     environment:
       TZ: Asia/Tokyo # タイムゾーンを日本時刻に設定
     ports:
@@ -39,7 +39,7 @@ services:
       - MYSQL_USER=user
       - MYSQL_PASSWORD=pass
       - MYSQL_ROOT_PASSWORD=pass
-      - 'TZ=Asia/Tokyo' # タイムゾーンを日本時刻に設定
+      - 'TZ=Asia/Tokyo'
     image: mysql:8.0
     command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
     volumes:
